--- a/package.json
+++ b/package.json
@@ -10,9 +10,12 @@
   },
   "dependencies": {
     "@heroicons/react": "^2.2.0",
+    "@types/nodemailer": "^6.4.17",
     "lucide-react": "^0.483.0",
     "mongoose": "^8.13.1",
     "next": "15.2.4",
+    "next-client-cookies": "^2.0.1",
+    "nodemailer": "^6.10.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-icons": "^5.5.0"
